# sw_arch_demo_grpc

./: .gitignore
api_gateway/app/: app.py
api_gateway/app/controller/v1/: house_keeper.py
api_gateway/app/dto/: house_keeper.py
api_gateway/app/service/: house_keeper.py
api_gateway/docs/: openapi.json
core_service/: requirements.txt  run.py
core_service/app/: app.py
core_service/app/config/: config.py
core_service/app/controller/grpc/: housekeeper.py
core_service/app/service/: house_keeper.py
core_service/docs/: openapi.json
grpc_base/: pyproject.toml
grpc_base/src/grpc_base/compiled_proto/: housekeeper_pb2.py  housekeeper_pb2_grpc.py
grpc_base/src/grpc_base/proto/: housekeeper.proto
web_client/: .gitignore  .gitlab-ci.yml  Dockerfile  README.MD  package-lock.json  package.json
web_client/src/: App.tsx  authProvider.ts  dataProvider.ts  environment.ts  meta.json
web_client/src/components/pages/auth/components/: login.tsx
web_client/src/pages/housekeeper/: create.tsx  edit.tsx  list.tsx
